Classification using several different graph metrics

--- a/graph_database/graph_1_4.ipynb
+++ b/graph_database/graph_1_4.ipynb
@@ -150,13 +150,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_15408\\2901317241.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_14372\\2901317241.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  peak_df['Widths'] = widths\n",
-      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_15408\\2901317241.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_14372\\2901317241.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -403,7 +403,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_15408\\3240670544.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_14372\\3240670544.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -583,7 +583,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_15408\\412265839.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_14372\\412265839.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
        "4  (12, 1)          613         1964    SAMPLE  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
        "4  (12, 1)          613        98110      GRID  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
        "4        613     1964    SAMPLE"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
        "5        727      613    SAMPLE   78.463075"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1204,13 +1204,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_15408\\2862616078.py:26: SettingWithCopyWarning: \n",
+      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_14372\\2862616078.py:26: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  sample_data['DIST'] = 1 - scaler.fit_transform(sample_data[['DIST']])\n",
-      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_15408\\2862616078.py:27: SettingWithCopyWarning: \n",
+      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_14372\\2862616078.py:27: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1341,7 @@
        "5        727      613    SAMPLE    0.998558"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,11 +1352,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaled_df.to_csv(\"../../data/edges.csv\", index=False)"
+    "scaled_df.to_csv(\"../../data/graph_1_4/relationships.csv\", index=False)"
    ]
   },
   {
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1458,38 +1458,119 @@
        "      <td>(30, 1)</td>\n",
        "      <td>1964</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8008132</th>\n",
+       "      <td>210526-3-49</td>\n",
+       "      <td>450.79727</td>\n",
+       "      <td>1482.5781</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>11.954149</td>\n",
+       "      <td>98.2019</td>\n",
+       "      <td>(9, 1)</td>\n",
+       "      <td>8008132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8008234</th>\n",
+       "      <td>210526-3-49</td>\n",
+       "      <td>520.50116</td>\n",
+       "      <td>1482.3167</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>13.875621</td>\n",
+       "      <td>86.4581</td>\n",
+       "      <td>(10, 1)</td>\n",
+       "      <td>8008234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8008504</th>\n",
+       "      <td>210526-3-49</td>\n",
+       "      <td>705.01141</td>\n",
+       "      <td>1507.8912</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>54.718502</td>\n",
+       "      <td>125.7380</td>\n",
+       "      <td>(14, 1)</td>\n",
+       "      <td>8008504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8008936</th>\n",
+       "      <td>210526-3-49</td>\n",
+       "      <td>1000.22780</td>\n",
+       "      <td>1505.2144</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>18.241825</td>\n",
+       "      <td>110.7786</td>\n",
+       "      <td>(20, 1)</td>\n",
+       "      <td>8008936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8009138</th>\n",
+       "      <td>210526-3-49</td>\n",
+       "      <td>1138.26880</td>\n",
+       "      <td>1445.8882</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>6.888832</td>\n",
+       "      <td>75.9793</td>\n",
+       "      <td>(22, 1)</td>\n",
+       "      <td>8009138</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>51927 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           SpecID  WaveNumber:float  Absorbance:float Status:LABEL  \\\n",
-       "613   201210-1-00         618.90662         1842.5710       Normal   \n",
-       "727   201210-1-00         696.81091         1851.9185       Normal   \n",
-       "1026  201210-1-00         901.13898         1746.4041       Normal   \n",
-       "1165  201210-1-00         996.12756         1702.7238       Normal   \n",
-       "1964  201210-1-00        1542.14120         1475.0056       Normal   \n",
+       "              SpecID  WaveNumber:float  Absorbance:float   Status:LABEL  \\\n",
+       "613      201210-1-00         618.90662         1842.5710         Normal   \n",
+       "727      201210-1-00         696.81091         1851.9185         Normal   \n",
+       "1026     201210-1-00         901.13898         1746.4041         Normal   \n",
+       "1165     201210-1-00         996.12756         1702.7238         Normal   \n",
+       "1964     201210-1-00        1542.14120         1475.0056         Normal   \n",
+       "...              ...               ...               ...            ...   \n",
+       "8008132  210526-3-49         450.79727         1482.5781  Hyperglycemia   \n",
+       "8008234  210526-3-49         520.50116         1482.3167  Hyperglycemia   \n",
+       "8008504  210526-3-49         705.01141         1507.8912  Hyperglycemia   \n",
+       "8008936  210526-3-49        1000.22780         1505.2144  Hyperglycemia   \n",
+       "8009138  210526-3-49        1138.26880         1445.8882  Hyperglycemia   \n",
        "\n",
-       "      Widths:float  Prominences:float GridSlot  Node_ID:ID  \n",
-       "613      57.732793           181.9741  (12, 1)         613  \n",
-       "727      33.525178           193.5749  (13, 1)         727  \n",
-       "1026    107.305604           157.9830  (18, 1)        1026  \n",
-       "1165     26.861586           115.9938  (19, 1)        1165  \n",
-       "1964     15.749470            87.6968  (30, 1)        1964  "
+       "         Widths:float  Prominences:float GridSlot  Node_ID:ID  \n",
+       "613         57.732793           181.9741  (12, 1)         613  \n",
+       "727         33.525178           193.5749  (13, 1)         727  \n",
+       "1026       107.305604           157.9830  (18, 1)        1026  \n",
+       "1165        26.861586           115.9938  (19, 1)        1165  \n",
+       "1964        15.749470            87.6968  (30, 1)        1964  \n",
+       "...               ...                ...      ...         ...  \n",
+       "8008132     11.954149            98.2019   (9, 1)     8008132  \n",
+       "8008234     13.875621            86.4581  (10, 1)     8008234  \n",
+       "8008504     54.718502           125.7380  (14, 1)     8008504  \n",
+       "8008936     18.241825           110.7786  (20, 1)     8008936  \n",
+       "8009138      6.888832            75.9793  (22, 1)     8009138  \n",
+       "\n",
+       "[51927 rows x 8 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "peak_df.head()"
+    "peak_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1507,11 +1588,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "peak_df.to_csv('../../data/nodes.csv', index=False)"
+    "peak_df.to_csv('../../data/graph_1_4/nodes.csv', index=False)"
    ]
   }
  ],
@@ -1531,7 +1612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
