Pybaselines is much faster than the hand made algorithm

--- a/feature_engineering/Parrallel_Baseline_Correction_and_Smoothing_Cross_Validation.ipynb
+++ b/feature_engineering/Parrallel_Baseline_Correction_and_Smoothing_Cross_Validation.ipynb
@@ -584,22 +584,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def baseline_als_optimized(y, lam, p, niter=10):\n",
-    "    L = len(y)\n",
-    "    D = sparse.diags([1,-2,1],[0,-1,-2], shape=(L,L-2))\n",
-    "    D = lam * D.dot(D.transpose()) # Precompute this term since it does not depend on `w`\n",
-    "    w = np.ones(L)\n",
-    "    W = sparse.spdiags(w, 0, L, L)\n",
-    "    for i in range(niter):\n",
-    "        W.setdiag(w) # Do not create a new matrix, just update diagonal values\n",
-    "        Z = W + D\n",
-    "        z = spsolve(Z, w*y)\n",
-    "        w = p * (y > z) + (1-p) * (y < z)\n",
-    "    return z\n",
-    "\n",
-    "# lam = 10 ** 8\n",
-    "# p = 0.05\n",
-    "# df['Baseline_Corrected_Absorbance'] = df.groupby('SpecID')['Despiked_Absorbance'].transform(lambda x: baseline_als_optimized(x, lam=lam, p=p))"
+    "# def baseline_als_optimized(y, lam, p, niter=10):\n",
+    "#     L = len(y)\n",
+    "#     D = sparse.diags([1,-2,1],[0,-1,-2], shape=(L,L-2))\n",
+    "#     D = lam * D.dot(D.transpose()) # Precompute this term since it does not depend on `w`\n",
+    "#     w = np.ones(L)\n",
+    "#     W = sparse.spdiags(w, 0, L, L)\n",
+    "#     for i in range(niter):\n",
+    "#         W.setdiag(w) # Do not create a new matrix, just update diagonal values\n",
+    "#         Z = W + D\n",
+    "#         z = spsolve(Z, w*y)\n",
+    "#         w = p * (y > z) + (1-p) * (y < z)\n",
+    "#     return z"
    ]
   },
   {
@@ -622,20 +618,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Testing\n",
+    "# lam_values = [10**7, 10**8]\n",
+    "# p_values = [0.001]\n",
+    "# window_size = [9, 101]\n",
+    "# poly_order = [1]\n",
+    "\n",
+    "# 1 and 2 use the old algorithm.\n",
+    "# First Search\n",
     "# lam_values = [10**4, 10**5, 10**6, 10**7]\n",
     "# p_values = [0.001, 0.005, 0.01, 0.05, 0.1]\n",
     "# window_size = [5, 7, 9, 19, 25, 51, 101, 151, 251]\n",
     "# poly_order = [1, 2, 3]\n",
     "\n",
-    "lam_values = [10**7, 10**8, 10**9]\n",
-    "p_values = [0.001, 0.005, 0.01, 0.05, 0.1]\n",
-    "window_size = [9, 19, 25, 51, 101, 151]\n",
-    "poly_order = [1, 2]\n",
+    "# Second Search\n",
+    "# lam_values = [10**7, 10**8, 10**9]\n",
+    "# p_values = [0.001, 0.005, 0.01, 0.05, 0.1]\n",
+    "# window_size = [9, 19, 25, 51, 101, 151]\n",
+    "# poly_order = [1, 2]\n",
     "\n",
-    "# lam_values = [10**7, 10**8]\n",
-    "# p_values = [0.001]\n",
-    "# window_size = [9, 101]\n",
-    "# poly_order = [1]"
+    "# Third Search\n",
+    "lam_values = [10**9, 10**10]\n",
+    "p_values = [0.01, 0.05, 0.1]\n",
+    "window_size = [9, 19, 25, 35, 45, 51, 65, 75, 85, 95, 101, 151, 201]\n",
+    "poly_order = [1, 2, 3]\n",
+    "\n",
+    "# Fourth Search\n",
+    "# lam_values = [10**2, 10**3, 10**4, 10**5, 10**6, 10**7, 10**8, 10**9]\n",
+    "# p_values = [0.001, 0.005, 0.01, 0.05, 0.1]\n",
+    "# window_size = [9, 19, 25, 35, 45, 51, 65, 75, 85, 95, 101, 151, 201]\n",
+    "# poly_order = [1, 2, 3]"
    ]
   },
   {
@@ -818,9 +830,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# def process_combination(lam, p, df):\n",
+    "#     df_copy = df.copy()  # Work on a copy to avoid modifying the original df in-place\n",
+    "#     df_copy['Baseline_Corrected_Absorbance'] = df_copy['Absorbance'] - df_copy.groupby('SpecID')['Absorbance'].transform(lambda x: baseline_als_optimized(x, lam=lam, p=p))\n",
+    "#     baseline_corrected = prepare_wavelength_df(df_copy, 'Baseline_Corrected_Absorbance')\n",
+    "#     X = baseline_corrected.drop(['Status'], axis=1)\n",
+    "#     y = baseline_corrected['Status']\n",
+    "    \n",
+    "#     et = ExtraTreesClassifier(random_state=1234)\n",
+    "#     cv = KFold(n_splits=10, shuffle=True, random_state=1234)\n",
+    "    \n",
+    "#     scores = cross_validate(et, X, y, cv=cv, scoring=['accuracy', 'precision_macro', 'recall_macro', 'f1_macro'])\n",
+    "    \n",
+    "#     return {\n",
+    "#         'lam': lam,\n",
+    "#         'p': p,\n",
+    "#         'Accuracy': np.mean(scores['test_accuracy']),\n",
+    "#         'Precision': np.mean(scores['test_precision_macro']),\n",
+    "#         'Recall': np.mean(scores['test_recall_macro']),\n",
+    "#         'F1': np.mean(scores['test_f1_macro']),\n",
+    "#         'Accuracy Std': np.std(scores['test_accuracy']),\n",
+    "#         'Precision Std': np.std(scores['test_precision_macro']),\n",
+    "#         'Recall Std': np.std(scores['test_recall_macro']),\n",
+    "#         'F1 Std': np.std(scores['test_f1_macro'])\n",
+    "#     }\n",
+    "\n",
+    "# # Parallel execution\n",
+    "# results = Parallel(n_jobs=-1)(delayed(process_combination)(lam, p, df) for lam in lam_values for p in p_values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pybaselines is actually much faster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pybaselines.whittaker import asls\n",
+    "\n",
+    "def asls_baseline_correction(x, lam, p):\n",
+    "        corrected, _ = asls(x, lam=lam, p=p)\n",
+    "        return x - corrected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def process_combination(lam, p, df):\n",
     "    df_copy = df.copy()  # Work on a copy to avoid modifying the original df in-place\n",
-    "    df_copy['Baseline_Corrected_Absorbance'] = df_copy['Absorbance'] - df_copy.groupby('SpecID')['Absorbance'].transform(lambda x: baseline_als_optimized(x, lam=lam, p=p))\n",
+    "\n",
+    "    df_copy['Baseline_Corrected_Absorbance'] = df_copy.groupby('SpecID')['Absorbance'].transform(lambda x: asls_baseline_correction(x, lam, p))\n",
+    "    \n",
+    "    # Assuming prepare_wavelength_df function processes the df_copy and returns a DataFrame ready for ML\n",
     "    baseline_corrected = prepare_wavelength_df(df_copy, 'Baseline_Corrected_Absorbance')\n",
     "    X = baseline_corrected.drop(['Status'], axis=1)\n",
     "    y = baseline_corrected['Status']\n",
@@ -849,14 +919,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Parameters: lam=1000000000.0, p=0.05 with Accuracy: 0.9343\n"
+      "Best Parameters: lam=10000000000.0, p=0.1 with Accuracy: 0.9406\n"
      ]
     }
    ],
@@ -882,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +1029,7 @@
     "    # Compute the baseline correction for a given lambda and p.\n",
     "\n",
     "    df_copy = df.copy()\n",
-    "    df_copy['Baseline_Corrected_Absorbance'] = df_copy['Absorbance'] - df_copy.groupby('SpecID')['Absorbance'].transform(lambda x: baseline_als_optimized(x, lam=lam, p=p))\n",
+    "    df_copy['Baseline_Corrected_Absorbance'] = df_copy.groupby('SpecID')['Absorbance'].transform(lambda x: asls_baseline_correction(x, lam, p))\n",
     "    \n",
     "    # Returning both the corrected DataFrame and the lam, p parameters for later use\n",
     "    return lam, p, df_copy\n",
@@ -1013,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1046,13 +1116,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_combination(lam, p, df):\n",
     "    df_copy = df.copy()  # Work on a copy to avoid modifying the original df in-place\n",
-    "    df_copy['Baseline_Corrected_Absorbance'] = df_copy['Absorbance'] - df_copy.groupby('SpecID')['Absorbance'].transform(lambda x: baseline_als_optimized(x, lam=lam, p=p))\n",
+    "    df_copy['Baseline_Corrected_Absorbance'] = df_copy.groupby('SpecID')['Absorbance'].transform(lambda x: asls_baseline_correction(x, lam, p))\n",
     "    df_copy['Scaled_Baseline'] = df_copy.groupby('SpecID')['Baseline_Corrected_Absorbance'].transform(lambda x: normalise(x))\n",
     "\n",
     "    baseline_corrected = prepare_wavelength_df(df_copy, 'Scaled_Baseline')\n",
@@ -1083,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1266,7 @@
     "    # Compute the baseline correction for a given lambda and p.\n",
     "\n",
     "    df_copy = df.copy()\n",
-    "    df_copy['Baseline_Corrected_Absorbance'] = df_copy['Absorbance'] - df_copy.groupby('SpecID')['Absorbance'].transform(lambda x: baseline_als_optimized(x, lam=lam, p=p))\n",
+    "    df_copy['Baseline_Corrected_Absorbance'] = df_copy.groupby('SpecID')['Absorbance'].transform(lambda x: asls_baseline_correction(x, lam, p))\n",
     "    # Returning both the corrected DataFrame and the lam, p parameters for later use\n",
     "    return lam, p, df_copy\n",
     "\n",
@@ -1258,7 +1328,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Parameters: lam=10000000.0, p=0.005, window_size=51.0, poly_order=2.0 with Accuracy: 0.9370\n"
+      "Best Parameters: lam=1000000000.0, p=0.001, window_size=25.0, poly_order=1.0 with Accuracy: 0.9452\n"
      ]
     }
    ],
