--- a/feature_engineering/Smoothing_First_Search.ipynb
+++ b/feature_engineering/Smoothing_First_Search.ipynb
@@ -579,22 +579,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def baseline_als_optimized(y, lam, p, niter=10):\n",
-    "    L = len(y)\n",
-    "    D = sparse.diags([1,-2,1],[0,-1,-2], shape=(L,L-2))\n",
-    "    D = lam * D.dot(D.transpose()) # Precompute this term since it does not depend on `w`\n",
-    "    w = np.ones(L)\n",
-    "    W = sparse.spdiags(w, 0, L, L)\n",
-    "    for i in range(niter):\n",
-    "        W.setdiag(w) # Do not create a new matrix, just update diagonal values\n",
-    "        Z = W + D\n",
-    "        z = spsolve(Z, w*y)\n",
-    "        w = p * (y > z) + (1-p) * (y < z)\n",
-    "    return z\n",
+    "# def baseline_als_optimized(y, lam, p, niter=10):\n",
+    "#     L = len(y)\n",
+    "#     D = sparse.diags([1,-2,1],[0,-1,-2], shape=(L,L-2))\n",
+    "#     D = lam * D.dot(D.transpose()) # Precompute this term since it does not depend on `w`\n",
+    "#     w = np.ones(L)\n",
+    "#     W = sparse.spdiags(w, 0, L, L)\n",
+    "#     for i in range(niter):\n",
+    "#         W.setdiag(w) # Do not create a new matrix, just update diagonal values\n",
+    "#         Z = W + D\n",
+    "#         z = spsolve(Z, w*y)\n",
+    "#         w = p * (y > z) + (1-p) * (y < z)\n",
+    "#     return z\n",
     "\n",
     "# lam = 10 ** 8\n",
     "# p = 0.05\n",
     "# df['Baseline_Corrected_Absorbance'] = df.groupby('SpecID')['Despiked_Absorbance'].transform(lambda x: baseline_als_optimized(x, lam=lam, p=p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pybaselines.whittaker import asls\n",
+    "\n",
+    "def asls_baseline_correction(x, lam, p):\n",
+    "        corrected, _ = asls(x, lam=lam, p=p)\n",
+    "        return x - corrected"
    ]
   },
   {
@@ -654,7 +667,7 @@
     "    # Apply baseline correction and evaluate the model for given lam, p, window, and poly on a smoothed DataFrame.\n",
     "\n",
     "    df_corrected = df_smoothed.copy()\n",
-    "    df_corrected['Baseline_Corrected_Absorbance'] = df_corrected['Smoothed_Absorbance'] - df_corrected.groupby('SpecID')['Smoothed_Absorbance'].transform(lambda x: baseline_als_optimized(x, lam=lam, p=p))\n",
+    "    df_corrected['Baseline_Corrected_Absorbance'] = df_corrected.groupby('SpecID')['Smoothed_Absorbance'].transform(lambda x: asls_baseline_correction(x, lam=lam, p=p))\n",
     "    \n",
     "    corrected_baseline = prepare_wavelength_df(df_corrected, 'Baseline_Corrected_Absorbance')\n",
     "    X = corrected_baseline.drop(['Status'], axis=1)\n",
@@ -699,14 +712,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Parameters: lam=10000000.0, p=0.05, window_size=51.0, poly_order=2.0 with Accuracy: 0.9524\n"
+      "Best Parameters: window_size=51.0, poly_order=2.0, lam=100000000.0, p=0.1 with Accuracy: 0.9567\n"
      ]
     }
    ],
@@ -732,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,8 +762,8 @@
     "    # Apply baseline correction and evaluate the model for given lam, p, window, and poly on a smoothed DataFrame.\n",
     "\n",
     "    df_corrected = df_smoothed.copy()\n",
-    "    df_corrected['Baseline_Corrected_Absorbance'] = df_corrected['Smoothed_Absorbance'] - df_corrected.groupby('SpecID')['Smoothed_Absorbance'].transform(lambda x: baseline_als_optimized(x, lam=lam, p=p))\n",
-    "    df_corrected['Scaled_Smooth_Baseline'] = df_corrected.groupby('SpecID')['Smoothed_Baseline'].transform(lambda x: normalise(x))\n",
+    "    df_corrected['Baseline_Corrected_Absorbance'] = df_corrected['Smoothed_Absorbance'] - df_corrected.groupby('SpecID')['Smoothed_Absorbance'].transform(lambda x: asls_baseline_correction(x, lam=lam, p=p))\n",
+    "    df_corrected['Scaled_Smooth_Baseline'] = df_corrected.groupby('SpecID')['Baseline_Corrected_Absorbance'].transform(lambda x: normalise(x))\n",
     "    \n",
     "    corrected_baseline = prepare_wavelength_df(df_corrected, 'Scaled_Smooth_Baseline')\n",
     "    X = corrected_baseline.drop(['Status'], axis=1)\n",
@@ -795,14 +808,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Parameters: lam=10000000.0, p=0.005, window_size=51.0, poly_order=2.0 with Accuracy: 0.9370\n"
+      "Best Parameters: lam=1000000000.0, p=0.001, window_size=19.0, poly_order=2.0 with Accuracy: 0.9422\n"
      ]
     }
    ],
